@@ -20,6 +20,10 @@
 		<property name="internationalize" type="bool" help="For C++ Only. Generate strings with _() macro instead of wxT() macro. This allows for translation.">0</property>
 		<property name="use_microsoft_bom" type="bool" help="For C++ and WXMSW Only. Files are generated with UTF-8 encoding. Microsoft compiliers expect a specific byte sequence at the beginning of a file. GCC does NOT expect this. Only set this to true when using a Microsoft compiler.">0</property>
 		<property name="precompiled_header" type="text" help="For C++ Only. Precompiled header to include at the top of the generated source file. Define WX_PRECOMP when compiling to use a precompiled header.">wx/wxprec.h</property>
+		<property name="class_decoration" type="parent" help="For C++ Only. Used to decorate classes with DLL export macros.">
+		  <child name="decoration" help="The name of the macro or the dll export decoration."/>
+		  <child name="header" help="Optional header file where the export macro is defined."/>
+	    </property>
 		<property name="encoding" type="option" help="">
 		  <option name="UTF-8" />
 		  <option name="ANSI" />UTF-8
