@@ -3,6 +3,8 @@
 date Version 3.00.33 (Beta 3)
 + Implemented FS#156 — "Ability to wrap generated code in namespace(s)"
    using patch supplied by kramar.
++ Implemented FS#157 — "Ability to decorate the generated class with dll export"
+   using patch supplied by kramar.
 
 03-07-2007 Version 3.00.32 (Beta 3)
 ^ New way to save propgrid values when using menu or toolbar items.
